--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    //dagger hilt
     id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -50,8 +52,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     //dagger hilt
-    implementation 'com.google.dagger:hilt-android:2.46.1'
-    annotationProcessor 'com.google.dagger:hilt-compiler:2.46.1'
+    implementation "com.google.dagger:hilt-android:2.46.1"
+    kapt "com.google.dagger:hilt-compiler:2.46.1"
 
 
     implementation 'androidx.fragment:fragment-ktx:1.1.0'
