--- a/presenter/build.gradle
+++ b/presenter/build.gradle
@@ -1,7 +1,9 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    //dagger hilt
     id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -9,7 +11,6 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.presenter"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -39,7 +40,6 @@ android {
 dependencies {
 
     implementation project(":domain")
-    implementation project(":data")
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
@@ -48,8 +48,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     //dagger hilt
-    implementation 'com.google.dagger:hilt-android:2.46.1'
-    annotationProcessor 'com.google.dagger:hilt-compiler:2.46.1'
+    implementation "com.google.dagger:hilt-android:2.46.1"
+    kapt "com.google.dagger:hilt-compiler:2.46.1"
 
 
     implementation 'androidx.fragment:fragment-ktx:1.1.0'
